test/classes/initializers/phase2/modifyParentParam.good
modifyParentParam.chpl:11: In initializer:
modifyParentParam.chpl:15: error: cannot update a param field, "x", from parent type outside of this.init() or super.init()
